Converted buttons to image buttons, added textinputlayout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Parakeet - Voice Synthesizer</string>
 
     <string name="aws_cognito_pool_id">us-east-2:2cdb14ef-d3c2-416a-9cd7-aff623971dd7</string>
+
+    <!-- These are here to resolve a layout error caused by a bug in TextInputLayout -->
+    <item name="visible" type="id"/>
+    <item name="masked" type="id"/>
 </resources>
