--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="aws_cognito_pool_id">us-east-2:2cdb14ef-d3c2-416a-9cd7-aff623971dd7</string>
 
+    <string name="default_message">Hello world!</string>
     <string name="speech_listener_prompt">Say a phrase!</string>
 
     <!-- These are here to resolve a layout error caused by a bug in TextInputLayout -->
